[package]
name = "astro"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
chrono-tz = "0.10.0"
colored = "2.2.0"
prettytable-rs = "0.10.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
wasm-bindgen = "0.2"
